dark mode in hamburger menu background fix and removed missing image from articles' content

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -47,7 +47,7 @@ div.hamb-menu{
     display: none;
     justify-content: space-between;
     padding: 10px;
-    background-color: #b8b8b8;
+    background-color: #e0e0e0;
 }
 
 div.nav-links-hamb{
